--- a/MvcMovieGiraffe.fsproj
+++ b/MvcMovieGiraffe.fsproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Giraffe" Version="5.0.0-rc-1" />
     <PackageReference Include="Giraffe.ViewEngine" Version="1.3.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.1" />
+    <PackageReference Include="Ply" Version="0.3.1" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.*" />
   </ItemGroup>
 
