--- a/MvcMovieGiraffe.fsproj
+++ b/MvcMovieGiraffe.fsproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Giraffe.ViewEngine" Version="1.3.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Ply" Version="0.3.1" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.*" />
   </ItemGroup>
